misc additions and doc updates

--- a/config.conf
+++ b/config.conf
@@ -21,7 +21,10 @@ sort_metric = %(param_to_plot)s
 # When sorting, do we want to sort in descending order of values (such that 
 # subroutines with the highest values are prioritized for plotting)?
 sort_descending = yes
-
+# Top-level directory containing different experiments' TAU outputs
+tau_outs_topdir = ./tau_outs
+# Figure defaults
+barchart_width = 0.5
 
 [compute_stacked_exclTime]
 type = stacked_bar
