--- a/config.conf
+++ b/config.conf
@@ -1,7 +1,8 @@
 [DEFAULT]
 # Specify the experiments to run. Each of these should be a subrirectory under 
 # the current working directorry and should have a file inside named either 
-# profile.txt or profile.txt.gz containing the profile data.
+# profile.txt or profile.txt.gz containing the profile data. They should also
+# contain the model configuration file (e.g. 'configure_file_01' for NMM-B)
 experiments = tau_3hr, tau_15hr_callgraph
 # If this is set, do not analyze/add any subroutines for the current node 
 # once the cummulative exclusive_percent value reaches this value.
@@ -22,7 +23,8 @@ sort_metric = %(param_to_plot)s
 # subroutines with the highest values are prioritized for plotting)?
 sort_descending = yes
 # Top-level directory containing different experiments' TAU outputs
-tau_outs_topdir = ./tau_outs
+##tau_outs_topdir = ./tau_outs
+tau_outs_topdir = /home/Javier.Delgado/scratch/nems/g5nr/data/gamma/2j_5500x4000/2006090400/nam_physics/atmos_rhel7
 # Figure defaults
 barchart_width = 0.5
 
